--- a/CinemaBook/Scence/StoreShoppingCart/Cart/view/CartViewController.xib
+++ b/CinemaBook/Scence/StoreShoppingCart/Cart/view/CartViewController.xib
@@ -11,6 +11,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CartViewController" customModule="CinemaBook" customModuleProvider="target">
             <connections>
+                <outlet property="lbl_number" destination="TQU-ys-XaN" id="se8-w7-dK1"/>
+                <outlet property="lbl_total_number" destination="xgs-UM-T5o" id="AlQ-0b-FS4"/>
                 <outlet property="tableView" destination="2Uv-bc-crS" id="OWE-fo-7uf"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -159,7 +161,7 @@
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0đ" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xgs-UM-T5o">
                                             <rect key="frame" x="362" y="-0.33333333333337123" width="21" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
+                                            <color key="textColor" systemColor="systemRedColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
@@ -185,6 +187,9 @@
                                             <real key="value" value="10"/>
                                         </userDefinedRuntimeAttribute>
                                     </userDefinedRuntimeAttributes>
+                                    <connections>
+                                        <action selector="btn_paymentfoodcombo:" destination="-1" eventType="touchUpInside" id="pOU-8K-zpa"/>
+                                    </connections>
                                 </button>
                             </subviews>
                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
