--- a/CinemaBook/Scence/Home/view/HomeViewController.xib
+++ b/CinemaBook/Scence/Home/view/HomeViewController.xib
@@ -9,13 +9,16 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
-        <array key="Roboto-Regular.ttf">
-            <string>Roboto-Regular</string>
+        <array key="Roboto-Bold.ttf">
+            <string>Roboto-Bold</string>
         </array>
     </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HomeViewController" customModule="CinemaBook" customModuleProvider="target">
             <connections>
+                <outlet property="avatar" destination="hcb-62-GwD" id="6l6-Ra-J5J"/>
+                <outlet property="lbl_name_account" destination="6ly-WZ-Dbr" id="0ug-qd-Dak"/>
+                <outlet property="lbl_price_point" destination="u4b-MK-RxH" id="nnS-aD-06T"/>
                 <outlet property="tableView" destination="vVx-X6-bnx" id="iUk-Fg-iLI"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -57,16 +60,16 @@
                                     </constraints>
                                 </imageView>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Xin chào, Nguyễn Xuân Tiến Dũng" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6ly-WZ-Dbr">
-                                    <rect key="frame" x="78" y="8" width="100" height="28.5"/>
+                                    <rect key="frame" x="78" y="8" width="250" height="14.5"/>
                                     <constraints>
-                                        <constraint firstAttribute="width" constant="100" id="g4S-fU-S63"/>
+                                        <constraint firstAttribute="width" constant="250" id="g4S-fU-S63"/>
                                     </constraints>
-                                    <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="12"/>
+                                    <fontDescription key="fontDescription" name="Roboto-Bold" family="Roboto" pointSize="12"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bitcoinsign.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Jp9-qH-MqZ">
-                                    <rect key="frame" x="78" y="37" width="22" height="21"/>
+                                    <rect key="frame" x="78" y="23" width="22" height="21"/>
                                     <color key="tintColor" systemColor="systemYellowColor"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="22" id="2nq-35-qsO"/>
@@ -74,7 +77,7 @@
                                     </constraints>
                                 </imageView>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1,000,000" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u4b-MK-RxH">
-                                    <rect key="frame" x="100" y="39.5" width="56.5" height="14.5"/>
+                                    <rect key="frame" x="100" y="25.5" width="56.5" height="14.5"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                     <color key="textColor" systemColor="systemYellowColor"/>
                                     <nil key="highlightedColor"/>
